hphp/test/zend/good/ext-standard-strings/bug26973.php
<?php

printf("%+05d\n", 200);
printf("%+05d\n", -200);
printf("%+05f\n", 200);
printf("%+05f\n", -200);
printf("%+05u\n", 200);
printf("%+05u\n", -200);
echo "---\n";
printf("%05d\n", 200);
printf("%05d\n", -200);
printf("%05f\n", 200);
printf("%05f\n", -200);
printf("%05u\n", 200);
printf("%05u\n", -200);

?>